--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
-    "serve-favicon": "^2.0.1"
+    "serve-favicon": "^2.0.1",
+    "frisby": "latest",
+    "jasmine-node": "latest"
   },
   "devDependencies": {
     "jshint": "^2.5.6",
